--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,7 +1,7 @@
-body {
-  background-color: black;
-}
-
-h1 {
-  color: #01FFC3;
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000000;
+  height: 100vh;
 }
