--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,7 +1,7 @@
-.App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #000000;
-  height: 100vh;
-}
+// .App {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   background-color: #000000;
+//   height: 100vh;
+// }
