--- a/src/App/Components/Shared/UserCard/UserCard.scss
+++ b/src/App/Components/Shared/UserCard/UserCard.scss
@@ -1,11 +1,11 @@
-.userPlaylists {
-  height: 68vh;
-  border: 2px solid #01FFFF;
-  border-radius: 5px;
-  margin: 1px;
-}
+// .userPlaylists {
+//   height: 68vh;
+//   border: 2px solid #01FFFF;
+//   border-radius: 5px;
+//   margin: 1px;
+// }
 
 .scroll {
   overflow-y: scroll;
-  height: 60vh;
+  height: 65vh;
 }
