added a store with useContext/useReducer

--- a/src/App/Components/Pages/Profile/Profile.scss
+++ b/src/App/Components/Pages/Profile/Profile.scss
@@ -13,6 +13,10 @@
 
 .display {
   width: 48.7vw;
+  height: 72vh;
+  border: 2px solid #01FFFF;
+  border-radius: 5px;
+  margin: 1px;
 }
 
 .bottomWrapper {
