routes for artists are working

--- a/src/Components/Pages/PlaylistPlayer/PlaylistPlayer.scss
+++ b/src/Components/Pages/PlaylistPlayer/PlaylistPlayer.scss
@@ -1,9 +1,22 @@
 .player {
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
   background-color: black;
   height: 100%;
   padding-top: 3em;
   padding-bottom: 3em;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.playerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2em;
 }
