styling is almost done

--- a/src/Components/Pages/Playlists/Playlists.scss
+++ b/src/Components/Pages/Playlists/Playlists.scss
@@ -18,10 +18,9 @@
 
 .listContainer {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
   margin-left: 10em;
   margin-right: 10em;
-  border: 1px solid #01FFFF;
   margin-top: 2em;
 }
